second day commit

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <li><a href="/contact/">Contact</a></li>
       </ul>
     </nav>
+    <main>
+      <section class="main-visual">
+        <h1>
+          <img src="./images/logo.png" alt="Movie Create">
+        </h1>
+      </section>
+    </main>
   </header>
   <main>
 
