third day commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
     </main>
   </header>
   <main>
-
+    <section id="vision" class="vision">
+      <div class="section-inner">
+        <h2>Vision</h2>
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
+      </div>
+    </section>
+    <section id="service" class="service">
+      <div class="section-inner">
+        <h2>Service</h2>
+        <div class="card-wrap">
+          <div class="card">
+            <figure> <img src="./images/service_01.jpg">
+            <figcaption>サービス①</figcaption>
+            </figure>
+            <div class="card-text">
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p> </div> </div> <div class="card"> <figure> <img src="./images/service_02.jpg"> <figcaption>サービス②</figcaption> </figure> <div class="card-text"> <p>テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </div>
+          </div>
+          <div class="card">
+            <figure>
+              <img src="./images/service_03.jpg"> <figcaption>サービス③</figcaption>
+            </figure>
+            <div class="card-text">
+              <p>テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
