--- a/index.html
+++ b/index.html
@@ -59,6 +59,67 @@
         </div>
       </div>
     </section>
+    <section id="news" class="news">
+      <div class="section-inner">
+        <h2>News</h2>
+        <ul class="list-news">
+          <li>
+            <span>2020.04.30</span>
+            <p class="title">ニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトル</p>
+          </li>
+          <li>
+            <span>2020.04.30</span>
+            <p class="title">ニュースタイトルニュースタイトル</p>
+          </li>
+          <li>
+            <span>2020.04.30</span>
+            <p class="title">ニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトルニュースタイトル</p>
+          </li>
+          <li>
+            <span>2020.04.30</span>
+            <p class="title">ニュースタイトルニュースタイトル</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section id="company" class="company">
+      <div class="section-inner">
+        <div class="box-company">
+          <h2 class="mask_inner is-anime">Company</h2>
+          <table>
+            <tbody>
+              <tr>
+                <th>会社名</th>
+                <td>株式会社MOVIE CREATE</td>
+              </tr>
+              <tr>
+                <th>代表取締役</th>
+                <td>テキスト</td>
+              </tr>
+              <tr>
+                <th>所在地</th>
+                <td>〒000-0000<br>
+                  テキストテキスト
+                </td>
+              </tr>
+              <tr>
+                <th>電話番号</th>
+                <td>000-0000-0000</td>
+              </tr>
+              <tr>
+                <th>設立</th>
+                <td>2020年4月26日</td>
+              </tr>
+              <tr>
+                <th>資本金</th>
+                <td>100万円</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.786672282858!2d139.72997282770027!3d35.662882115667706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b781be5e467%3A0xe509bf9d93a90408!2z44CSMTA2LTAwMzIg5p2x5Lqs6YO95riv5Yy65YWt5pys5pyo77yX5LiB55uu77yR77yV4oiS77yXIOaWsOWFreacrOacqOODk-ODqyA5Rg!5e0!3m2!1sja!2sjp!4v1578899021351!5m2!1sja!2sjp"></iframe>
+      </div>
+     </section>
   </main>
   <footer>
 
