--- a/index.html
+++ b/index.html
@@ -120,9 +120,26 @@
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.786672282858!2d139.72997282770027!3d35.662882115667706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b781be5e467%3A0xe509bf9d93a90408!2z44CSMTA2LTAwMzIg5p2x5Lqs6YO95riv5Yy65YWt5pys5pyo77yX5LiB55uu77yR77yV4oiS77yXIOaWsOWFreacrOacqOODk-ODqyA5Rg!5e0!3m2!1sja!2sjp!4v1578899021351!5m2!1sja!2sjp"></iframe>
       </div>
      </section>
+     <section id="recruit" class="recruit">
+      <div class="section-inner">
+        <h2>Recruit</h2>
+        <div class="recruit-wrap">
+          <div class="recruit-inner">
+            <p>テキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキ テキストテキストテキストテキストテキスト。</p>
+            <h3>募集職種</h3>
+            <ul class="list-recruit">
+              <li>- テキストテキスト</li>
+              <li>- テキストテキスト</li>
+              <li>- テキストテキスト</li>
+            </ul>
+            <a class="btn-01" href="/contact">お問い合わせ</a>
+          </div>
+        </div>
+      </div>
+     </section>
   </main>
   <footer>
-
+    <small>Copyrights © Movie Create Inc. All Rights Reserved.</small>
   </footer>
 </body>
 </html>
