--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </nav>
     <main>
       <section class="main-visual">
+        <video autoplay muted loop>
+          <source src="./images/movie.mp4" type="video/mp4">
+        </video>
         <h1>
           <img src="./images/logo.png" alt="Movie Create">
         </h1>
