--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/master.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 <body>
+  <button type="button" class="btn-menu">
+    <span class="btn-menu-lines"></span>
+  </button>
   <header>
     <nav>
       <ul class="nav-main">
