11th day commit

--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
       </ul>
     </nav>
     <main>
-      <section class="main-visual">
+      <!-- <section class="main-visual">
         <video autoplay muted loop>
           <source src="./images/movie.mp4" type="video/mp4">
         </video>
         <h1>
           <img src="./images/logo.png" alt="Movie Create">
         </h1>
-      </section>
+      </section> -->
     </main>
   </header>
   <main>
     <section id="vision" class="vision">
       <div class="section-inner">
-        <h2>Vision</h2>
+        <div class="heading-wrapper">
+          <h2 class="mask_inner is-animate"><span>Vision</span></h2>
+        </div>
         <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
@@ -46,7 +48,9 @@
     </section>
     <section id="service" class="service">
       <div class="section-inner">
-        <h2>Service</h2>
+        <div class="heading-wrapper">
+          <h2 class="mask_inner">Service</h2>
+        </div>
         <div class="card-wrap">
           <div class="card">
             <figure> <img src="./images/service_01.jpg">
@@ -69,7 +73,9 @@
     </section>
     <section id="news" class="news">
       <div class="section-inner">
-        <h2>News</h2>
+        <div class="heading-wrapper">
+          <h2 class="mask_inner">News</h2>
+        </div>
         <ul class="list-news">
           <li>
             <span>2020.04.30</span>
@@ -93,7 +99,9 @@
     <section id="company" class="company">
       <div class="section-inner">
         <div class="box-company">
-          <h2 class="mask_inner is-anime">Company</h2>
+          <div class="heading-wrapper">
+            <h2 class="mask_inner">Company</h2>
+          </div>
           <table>
             <tbody>
               <tr>
@@ -130,7 +138,9 @@
      </section>
      <section id="recruit" class="recruit">
       <div class="section-inner">
-        <h2>Recruit</h2>
+        <div class="heading-wrapper">
+          <h2 class="mask_inner">Recruit</h2>
+        </div>
         <div class="recruit-wrap">
           <div class="recruit-inner">
             <p>テキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキ テキストテキストテキストテキストテキスト。</p>
