12th day commit

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       </ul>
     </nav>
     <main>
-      <!-- <section class="main-visual">
+      <section class="main-visual">
         <video autoplay muted loop>
           <source src="./images/movie.mp4" type="video/mp4">
         </video>
         <h1>
           <img src="./images/logo.png" alt="Movie Create">
         </h1>
-      </section> -->
+      </section>
     </main>
   </header>
   <main>
     <section id="vision" class="vision">
       <div class="section-inner">
         <div class="heading-wrapper">
-          <h2 class="mask_inner is-animate"><span>Vision</span></h2>
+          <h2 class="mask_inner"><span>Vision</span></h2>
         </div>
         <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
         <p>テキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
