--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav>
       <ul class="nav-main">
-        <li><a href="/">Home</a></li>
+        <li><a href="#top">Home</a></li>
         <li><a href="#vision">Vision</a></li>
         <li><a href="#service">Service</a></li>
         <li><a href="#news">News</a></li>
